# ASL-Recognizer-With-Mediapipe-And-TTS

./: .gitignore  Makefile  README-en.md  README.md  pyproject.toml  requirements.txt
configs/: data.yaml  inference.yaml  model.yaml  train.yaml
data/interim/: sample_1773628140382.json  sample_1773628148259.json  sample_1773628156767.json  sample_1773628163333.json  sample_1773628170734.json  sample_1773628177878.json  sample_1773628184869.json  sample_1773628191347.json  sample_1773628200045.json  sample_1773628212543.json  sample_1773628222013.json  sample_1773628261040.json  sample_1773628281763.json  sample_1773628293823.json  sample_1773628304398.json  sample_1773628312820.json  sample_1773628328447.json  sample_1773628340191.json  sample_1773628364331.json  sample_1773628378283.json  sample_1773628384932.json  sample_1773628406943.json  sample_1773628415984.json  sample_1773628847592.json  sample_1773628855237.json  sample_1773628865191.json  sample_1773628878971.json  sample_1773628907884.json  sample_1773628914274.json  sample_1773628926083.json  sample_1773628945397.json  sample_1773628953525.json  sample_1773628965284.json  sample_1773628973436.json  sample_1773629001054.json  sample_1773629018364.json  sample_1773629026552.json  sample_1773629035922.json  sample_1773629042755.json  sample_1773629049511.json  (+58 more)
data/processed/: train.npz  train_meta.json
data/raw/: manifest.jsonl  sample_1773628140382.json  sample_1773628148259.json  sample_1773628156767.json  (+95 more)
scripts/: build_dataset.py
src/models/: model.py  (+2 more)
tests/: test_infer_webcam.py  test_predict.py
(+17 files in other folders)
